--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,9 +5,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="hello">Добро пожаловать!</string>
-   	<string name="medium_text_ru">Количество глаголов в базе: 2</string>
+   	<string name="medium_text_ru">Общее количество глаголов: 2</string>
    	<string name="medium_hint_text_ru">Введите своё имя</string>
-    <string name="textstart">Начать игру</string>
+    <string name="textstart">Старт</string>
     <string name="title_activity_second">Ответьте на 7 вопросов</string>
     <string name="title_activity_second2">SecondActivity</string>
 
